# ml_ops

./: .gitignore  LICENSE  Makefile  README.md  cloudbuild.yaml  dog-breed-identification.dvc  dtu-mlops-project-410911-5e3138395725.json  pyproject.toml  requirements.txt  tmp.txt
.dvc/: config
.github/config/: cpu_config.yaml
.github/workflows/: cml.yaml  deploy_api.yaml  dvc_pull.yaml  format_action.yaml  pipreqs.yaml  pull_and_test.yaml  testing.yaml  train_model.yaml
api/: Dockerfile  requirements.txt
api/src/: breeds.csv  main.py
cloudbuilds/: deploy_api.yaml
data/: .gitignore  processed.dvc
data/raw/: .gitignore
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
dog_breed_identification/: __init__.py  predict_model.py  train_cml.py  train_model.py
dog_breed_identification/config/: train_config.yaml
dog_breed_identification/data/: load_data.py  make_dataset.py
dog_breed_identification/models/: model.py  save_model.py
reports/: README.md
reports/figures/: classification_report.txt
tests/: __init__.py  test_data.py  test_endpoints.py  test_model.py
